# TARA_Tool_v.2.1

./: .env  README.md  pyproject.toml  requirements.txt  sysml_test2.json  sysmodel_test.json
app/: orchestrator.py
backend/: main.py  server_run_windows.bat
backend/api/: routes_assets.py  routes_csv.py  routes_modify.py  routes_stages.py  routes_upload.py
config/: logging.py  settings.py
docs/: api_usage.md
llm/: __init__.py  client.py  formatting.py  parser.py
models/: __init__.py  schemas.py
output/: assets.csv
output/run_20251203_234213/: assets.csv  id_counters.json
prompts/: 0.init and config.txt  1.asset_register.txt  2.damage_scenario.txt  3.threat_scenario.txt  4.impact_rating.txt  5.vulnerability_attackpath.txt  6.attack_feasibility.txt  7.Risk_values.txt
rag/: __init__.py  ingestion.py  retrieval.py  vector_store.py
scripts/: dev_run_windows.bat  dev_run_windows.ps1  init_rag_data.py
services/: __init__.py  asset_extraction.py  asset_utils.py  attack_feasibility.py  damage_scenarios.py  impact_rating.py  normalization.py  risk_values.py  threat_scenarios.py  vuln_attack_paths.py
storage/: __init__.py  csv_store.py  id_tags.py  run_state.py
tests/: __init__.py  test_backend_stages.py  test_csv_store.py  test_models.py  test_normalization.py  test_rag_vector_store.py  test_streamlit_smoke.py
ui/: streamlit_app.py
ui/web/: package.json  tailwind.config.js
ui/web/src/: App.jsx  api.js  index.css
ui/web/src/components/: FileUpload.jsx  ModifyPanel.jsx  NavBar.jsx  StageCard.jsx
ui/web/src/pages/: Dashboard.jsx  Stage1.jsx  (+6 more)
